--- a/src/Resources/translations/messages.pl.yml
+++ b/src/Resources/translations/messages.pl.yml
@@ -6,3 +6,5 @@ bitbag:
         signature_key: Drugi klucz konfiguracji
         pos_id: Identyfikator punktu płatności
         gateway_label: PayU
+        oauth_client_id: OAuth protocol - client_id
+        oauth_client_secret: OAuth protocol - client_secret
